ci-cd/k8s/dev/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quantumvestai-alb
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: quantumvestai
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:921930869047:certificate/94eec8e0-cf9a-4184-8e27-2c3c845c390a
    alb.ingress.kubernetes.io/healthcheck-path: "/api/v1/health"
    alb.ingress.kubernetes.io/healthcheck-port: "8000"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    alb.ingress.kubernetes.io/success-codes: "200-399"
spec:
  rules:
    - host: dev.quantumvestai.com
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: quantumvestai-dev-api
                port:
                  number: 8000
          - path: /health
            pathType: Exact
            backend:
              service:
                name: quantumvestai-dev-api
                port:
                  number: 8000
          - path: /docs
            pathType: Exact
            backend:
              service:
                name: quantumvestai-dev-api
                port:
                  number: 8000
          - path: /redoc
            pathType: Exact
            backend:
              service:
                name: quantumvestai-dev-api
                port:
                  number: 8000
          - path: /openapi.json
            pathType: Exact
            backend:
              service:
                name: quantumvestai-dev-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 80
